--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.15.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.10",
+    "vuex": "^4.1.0",
     "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.5.1"
   },
